force-app/main/default/objects/Project__c/fields/BaselineEndDate__c.field-meta.xml
<CustomField>
    <fullName>BaselineEndDate__c</fullName>
    <label>Baseline End Date</label>
    <summaryForeignKey>ProjectTask__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>