force-app/main/default/objects/Project__c/fields/BaselineStartDate__c.field-meta.xml
<CustomField>
    <fullName>BaselineStartDate__c</fullName>
    <label>Baseline Start Date</label>
    <summaryForeignKey>ProjectTask__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>