force-app/main/default/objects/Project__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project</relationshipName>
    <type>Lookup</type>
</CustomField>