force-app/main/default/objects/Project__c/fields/FM_StartDate__c.field-meta.xml
<CustomField>
    <fullName>FM_StartDate__c</fullName>
    <label>FM_StartDate</label>
    <type>DateTime</type>
</CustomField>