force-app/main/default/objects/Project__c/fields/FMEndDate__c.field-meta.xml
<CustomField>
    <fullName>FMEndDate__c</fullName>
    <label>FM_EndDate</label>
    <type>DateTime</type>
</CustomField>