force-app/main/default/objects/Project__c/fields/TotalExpense__c.field-meta.xml
<CustomField>
    <fullName>TotalExpense__c</fullName>
    <label>Total Expense</label>
    <summaryForeignKey>ProjectTask__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>