force-app/main/default/objects/Project__c/fields/TotalWorked__c.field-meta.xml
<CustomField>
    <fullName>TotalWorked__c</fullName>
    <label>Total Worked</label>
    <summaryForeignKey>ProjectTask__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>