force-app/main/default/objects/Project__c/recordTypes/TEST.recordType-meta.xml
<RecordType>
    <fullName>TEST</fullName>
    <active>true</active>
    <label>TEST</label>
</RecordType>